[lgthinq][fix] Win File compatibility
Co-authored-by: Jacob Laursen <jacob-github@vindvejr.dk>
Signed-off-by: Nemer Daud <37001239+nemerdaud@users.noreply.github.com>
Signed-off-by: Nemer Daud <nemer@smartsw.com.br>